CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - 2.8.3-dev

Removed deprecated classes
----------------------
* removed CruiseControl (old launch wrapper)
* removed net.sourceforge.cruisecontrol.SelfConfiguringPlugin 
* removed net.sourceforge.cruisecontrol.bootstrappers.CurrentBuildStatusBootstrapper
* removed net.sourceforge.cruisecontrol.bootstrappers.CurrentBuildStatusFTPBootstrapper
* removed net.sourceforge.cruisecontrol.publishers.CurrentBuildStatusPublisher
* removed net.sourceforge.cruisecontrol.publishers.CurrentBuildStatusFTPPublisher

Removed deprecated methods
----------------------
* Main, P4Bootstrapper, Log, ModificationSet 

TwitterPublisher
----------------------
* Add a new plugin for publishing build results to Twitter.

UCM
----------------------
* UCM.java not creating the right command line for describing all activities (CC-886). Reported by Adrien Gracia


CruiseControl Release Notes - 2.8.2

BuildLoopStatusReportTask
----------------------
* Fix bug where a project with no ModificationSet would cause the error message 'Failed to reach dashboard instance : http://localhost:8080/dashboard/buildloop/listener, either the dashboard has not started up or there is a network problem' (CC-766).

cruisecontrol.sh (Binary Release)
----------------------
* Allow JETTY_LOGS to be set by environment varable (CC-872). Patch by Angie Lin

CruiseControlConfig
----------------------
* Restore the ability to have custom PropertiesPlugins.

distributed
----------------------
* Fix bug where DistributedMasterBuilder was not delegating isTimeBuilder() to the nestedBuilder, which meant that forcing a build with only a single time based distributed build would fail. Reported by Spencer Smith

ExecBuilder
----------------------
* Log exceptions coming back from the ScriptRunner.

Maven2Builder
----------------------