@@ -4,6 +4,10 @@ Changes listed by release, then alphabetically.
 
 CruiseControl Release Notes - 2.8.3-dev
 
+Origo Publisher
+----------------------
+* Update to use new issue handling API. Patch by Patrick Ruckstuhl.
+
 Removed deprecated classes
 ----------------------
 * removed CruiseControl (old launch wrapper)
